--- a/scriptJS_set_and_get/index.html
+++ b/scriptJS_set_and_get/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
 	<meta charset="UTF-8">
-	<script type="text/javascript" src="script_get_set.js"></script>
+	
     <title>GET AND SET</title>
   </head>
   <body>
     <h2>GET</h2>
 
-		<form action="" onsubmit="get()">
+		<form action="get_set.php" method ="get" onsubmit="get()">
   			<label for="get_ip">IP for bootstrap</label><br>
   			<input type="text" id="get_ip" name="get_ip" value=""><br>
   			<label for="get_port">PORT for bootstrap</label><br>
   			<input type="text" id="get_port" name="get_port" value=""><br><br>
 			<label for="get_key">KEY of the value</label><br>
   			<input type="text" id="get_key" name="get_key" value=""><br><br>
-  			<input type="submit" value="Submit">
+  			<input type="submit" value="run get">
 		</form>
 
 
@@ -23,7 +23,7 @@
 
 	<h2>SET</h2>
 
-		<form action="" onsubmit="set()">
+		<form action="get_set.php" onsubmit="set()">
   			<label for="set_ip">IP for bootstrap</label><br>
   			<input type="text" id="set_ip" name="set_ip" value=""><br>
   			<label for="set_port">PORT for bootstrap</label><br>
@@ -35,6 +35,6 @@
   			<input type="submit" value="Submit">
 		</form>
 
-	<script src="script_get_set.js"></script>
+	
   </body>
 </html>
